# ExcersizeCPP

./: AudioManager.cpp  AudioManager.h  CMakeLists.txt  DialogueManager.cpp  DialogueManager.h  GameEventsManager.cpp  GameEventsManager.h  Globals.cpp  Globals.h  LekceSprite.cpp  LekceSprite.slnx  LekceSprite.vcxproj  LekceSprite.vcxproj.filters  MapGenerator.cpp  MapGenerator.h  MapJsonParse.cpp  MapJsonParse.h  Npc.cpp  Npc.h  Player.cpp  Player.h  README.md  Structs.h  resource.h
Game_linux_x86_64/: README.md
Game_win_x86_64/: readme.md
assets/: info.txt  map-level-01-v01.json  map-level-01-v1.json  map-level-01.json  map.json
